[tool.poetry]
name = "fastapi-python"
version = "0.1.0"
description = "Simple app to play with FastAPI"
authors = ["Nicolo Orlando <nicolo.orlando@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_python"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
